syntax = "proto3";

package com.example.demo.grpc;
option java_multiple_files = true;

message UserMessage {
	int32 id = 1;
	string user_id = 2;
	string pw = 3;
	string image_url = 4;
}

message UserRequest {
	UserMessage reqTextMsg = 1;
}

message UserResponse {
    UserMessage resTextMsg = 1;
}

service UserService {
    rpc UserTest(UserRequest) returns (UserResponse) {};
}